--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ psycopg2-binary==2.9.7
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic==1.10.11
-geoalchemy2==0.11.3
-python-dotenv==1.0.0
-databases==0.6.0
+geoalchemy2
+python-dotenv
+databases=
 typing_extensions==4.7.1
 httpx==0.25.0
 pytest==7.4.0
