--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-fastapi==0.101.1
-uvicorn[standard]==0.22.0
-SQLAlchemy==2.0.27
-psycopg2-binary==2.9.7
-python-jose==3.3.0
-passlib[bcrypt]==1.7.4
-pydantic==1.10.11
+fastapi
+uvicorn[standard]
+SQLAlchemy
+psycopg2-binary
+python-jose
+passlib[bcrypt]
+pydantic
 geoalchemy2
 python-dotenv
 databases
-typing_extensions==4.7.1
-httpx==0.25.0
-pytest==7.4.0
-pytest-asyncio==0.21.0
-shapely==2.0.4
-pydantic-settings==2.5.2
+typing_extensions
+httpx
+pytest
+pytest-asyncio
+shapely
+pydantic-settings
